fixed login-box overlapping issue

--- a/responsive.css
+++ b/responsive.css
@@ -255,7 +255,8 @@
         margin-top: 0.1rem;
         height: 3rem;
         padding: 0.8rem;
-        font-size: 0.35rem;
+        font-size: 0.3rem;
+        gap: 0.8rem;
     }
 
     .bottom-nav div img {
@@ -399,7 +400,7 @@
         align-items: center;
         gap: 1rem;
         font-size: 0.6rem;
-        margin-top: 5rem;
+        margin-top: 6rem;
         margin-bottom: 1.3em;
         box-shadow: 0 0 11px rgba(33, 33, 33, .2);
         overflow-x: scroll;
