--- a/style.css
+++ b/style.css
@@ -149,8 +149,8 @@ body {
 }
 
 .login-box {
-    height: 100svh;
-    width: 100svw;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
